tests/expectations/compiler/const_generics/const_generic_shadows_param_fail.out
Error [EAST0372017]: The name `N` is defined multiple times.
    --> compiler-test:7:18
     |
   7 |   fn foo::[N: u32](N: u32) -> u32 {
     |            ^ previous definition of `N` here
   7 |   fn foo::[N: u32](N: u32) -> u32 {
     |                    ^ `N` redefined here
